Ended working poker first player win 376 times